# maku

./: .gitignore  .nvim-dap.lua  .prettierignore  .tool-versions  Cargo.toml  README.md  README_ja.md  blackwhite.frag  blackwhite.vert  index.html  input.json  package.json  pyproject.toml
.github/workflows/: deploy.yml  rust.yml
.husky/: pre-commit
apps/: test.ts
apps/editor/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
apps/editor/src/: AddBlockButton.module.css  AddBlockButton.tsx  App.css.ts  App.jsx  App.module.css  App.tsx  Block.module.css  Block.tsx  Editor.tsx  Links.module.css  Links.tsx  Menu.module.css  Menu.tsx  NodeMain.tsx  NumberInput.module.css  NumberInput.tsx  Property.module.css  Property.tsx  data.ts  download.ts  main.tsx  project.ts  store.ts  test.ts  theme.css.ts
apps/editor/src/components/: BaseNode.css.ts  BaseNode.tsx  NodePalette.css.ts  NodePalette.tsx  types.tsx
apps/editor/src/maku/: context.ts  provider.tsx  types.ts
apps/editor/src/maku/nodes/: BaseNode.tsx  index.tsx  types.ts
apps/editor/src/modules/maku/: provider.tsx  test.ts  types.ts
apps/editor/src/store/: test.ts  useStore.ts
assets/: index-B3RgxHFi.js  index-B7ZH0ESw.css  index-Bf_11Opm.css  index-D675A_Fg.js  index-DhS2be88.js  input.json
crates/maku/: Cargo.toml  package.json
crates/maku/src/: lib.rs  maku.rs
crates/web/: Cargo.toml  package.json
crates/web/src/: lib.rs
docs/: 20251116-architecture-dsl-vs-ir.md  20251122-mobilenet-wasm-milestone.md  20251122-wasm-rust-conv2d-add-notes.md  20251127-node-definition.md  architecture-dsl-vs-ir.md
lib/maku/: Cargo.toml
lib/maku/src/: lib.rs
lib/maku_web/: Cargo.toml  Makefile  package.json
lib/maku_web/lib/: index.d.ts  index.js  index_bg.wasm  index_bg.wasm.d.ts
lib/maku_web/src/: lib.rs
lib/wasm/: Cargo.toml
lib/wasm/src/: lib.rs
src/: blackwhite.frag  blackwhite.vert  blend_mode.rs  composition.rs  copy.frag  copy.vert  demo.rs  error.rs  example.frag  example.vert  io.rs  lib.rs  main.rs  maku.rs  programs.rs  target.rs  value.rs
src/maku/: __init__.py  __main__.py
src/presets/: blackwhite.frag  blackwhite.vert  drop_shadow.frag  drop_shadow.vert  gaussian_blur.frag  gaussian_blur.vert
