[package]
name = "maku"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
image = "0.25.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
three-d = { version = "0.17.0", features = ["headless"] }
three-d-asset = { version = "0.7.0",features = ["png"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
winit = "0.28.7"

[[bin]]
name = "maku"
path = "src/maku.rs"
