[package]
name = "maku_web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
maku = { path = "../maku" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_wasm_bindgen = "0.6"
anyhow = "1"

[dependencies.js-sys]
version = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
